--- a/rview-ui/libs/css/color.scss
+++ b/rview-ui/libs/css/color.scss
@@ -153,3 +153,20 @@
 .r-light-color {
 	color: $r-light-color;
 }
+// 
+.r-white {
+  color: $r-white;
+}
+// 业务杂项 start
+.r-white {
+  color: $r-white;
+}
+
+.r-gray {
+  color: $r-black;
+}
+
+.r-black {
+  color: $r-black;
+}
+// 业务杂项 end
