--- a/rview-ui/libs/css/common.scss
+++ b/rview-ui/libs/css/common.scss
@@ -56,7 +56,7 @@ text {
 	display: flex;
 	/* #endif */
 	flex-direction: row;
-	align-items: center;
+	// align-items: center;
 }
 
 .r-flex-wrap {
